# bazos

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_selenium  Dockerfile_selenium2  LICENSE  README.md  docker-compose.yml  main.py  main.sh  make.sh  pyproject.toml  refactor_info_txt.py  requirements.txt  runtests.sh  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy.yml  lint.yml  publish.yml
Hub/: example-config.toml
bazos/: __init__.py  __main__.py  bazos.py  main.py  scrapper.py
bazos/core/: settings.py
bazos/info/: product.py  rubric_category.py  user.py
bazos/info/tests/: test_product.py
bazos/shared/: utils.py
bazos/tests/: test_country.py
core/: settings.py
etc/supervisor/conf.d/: fluxbox.conf
examples-data/: user_cz.yml
examples-data/plysak/: info.txt
scrapper/: __init__.py  __main__.py
scrapper/bazos/: __init__.py  bazos.py
scrapper/bazos/tests/: test_country.py
scrapper/common/: country.py
scrapper/info/: __init__.py  product.py  rubric_category.py  settings.py  user.py
scrapper/info/tests/: test_product.py
scrapper/scrappers/: bazos.py
scrapper/shared/: __init__.py  utils.py
scripts/: docker.sh  python.sh  release.sh  utils.sh
tests/images/: user_cz.yml
tests/images/apple-watch-reminek/: info.txt
